# booktacular

./: .gitignore  bake-templates.py  booktacular.code-workspace  license.txt  pyproject.toml  readme.md  requirements-dev.txt  requirements.local.txt  requirements.python2.txt  requirements.txt  setup-dev.sh  setup.py
booktacular/: __init__.py  btpb2.py  dumpslatext.py  finalizescribusbook.py  find_hierosoft.py  find_pycodetool.py  generateimageindex.py  irlmapping.py  meldsla.py  moregeopandas.py  morepdf.py  morescribus.py  pull_images.py  sheetfiller.py
booktacular/data/templates/: npc-universal-npc-roleplaying-template.tex
booktacular/morescribus/: __init__.py  buildpdf.py  compare.py  dumper.py
booktacular/morescribus/scribus_scripts/: export_all.py
booktacular/tests/: test_irlmapping.py  test_morescribus.py
doc/: help-pstill.txt  preflight.md
doc/development/: chunkdef-examples.json  example_xml.py  scribus-jasper-issue.md  training_disclosure.md
scribus_scripts/: export_all.py
scripts/: dumpslatext  find_booktacular.py  meldsla  pull_images  renumber-pdf
tabletopper/: __init__.py  dumpslatext.py  find_pyscribus.py  irlmapping.py  meldsla.py  morescribus.py  pull_images.py
tabletopper/tests/: test_irlmapping.py  test_morescribus.py
tests/booktacular/: test_get_all_queries.py  test_irlmapping.py  test_pairs.py  test_sheetfiller.py
tests/booktacular/data/: Nur_Wonderfield-pb2e.json  booktacular-source-fields.csv  sheet-fields.json
